Api web en Render,segun funcional..aun no hay nada seguro

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -7,6 +7,7 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=DESKTOP-ER28UEG\\SQLEXPRESS;Database=SchoolMUAI;Trusted_Connection=True;TrustServerCertificate=True;"
+        "DefaultConnection": "Host=aws-1-us-east-1.pooler.supabase.com;Port=5432;Database=postgres;Username=postgres.kaanpmthzvgfiftjodxd;Password=SchoolMuai123!;SSL Mode=Require;Trust Server Certificate=true"
+       
     }
 }
