Todas las tablas y rutas basicas montadas

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,13 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Host=aws-1-us-east-1.pooler.supabase.com;Port=5432;Database=postgres;Username=postgres.kaanpmthzvgfiftjodxd;Password=SchoolMuai123!;SSL Mode=Require;Trust Server Certificate=true"
-       
+
+    },
+    "Jwt": {
+        "Key": "CLAVE_SUPER_SECRETA_CAMBIAR_EN_PRODUCCION_123456",
+        "Issuer": "WebApplication1",
+        "Audience": "WebApplication1Users",
+        "ExpireMinutes": 60
     }
+
 }
